[gd_scene load_steps=9 format=2]

[ext_resource path="res://cube.gd" type="Script" id=1]
[ext_resource path="res://face.gd" type="Script" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://camera.gd" type="Script" id=4]
[ext_resource path="res://part.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2, 2, 0.5 )

[node name="game" type="Spatial"]
script = ExtResource( 3 )

[node name="camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 7.5 )
script = ExtResource( 4 )

[node name="cube" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="parts_container" type="Spatial" parent="cube"]

[node name="part_0" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, -1.5, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_0"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_0"]
mesh = SubResource( 3 )

[node name="part_1" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, -1.5, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_1"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_1"]
mesh = SubResource( 3 )

[node name="part_2" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, -1.5, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_2"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_2"]
mesh = SubResource( 3 )

[node name="part_3" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_3"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_3"]
mesh = SubResource( 3 )

[node name="part_4" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_4"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_4"]
mesh = SubResource( 3 )

[node name="part_5" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_5"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_5"]
mesh = SubResource( 3 )

[node name="part_6" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.5, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_6"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_6"]
mesh = SubResource( 3 )

[node name="part_7" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.5, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_7"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_7"]
mesh = SubResource( 3 )

[node name="part_8" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.5, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_8"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_8"]
mesh = SubResource( 3 )

[node name="part_9" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_9"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_9"]
mesh = SubResource( 3 )

[node name="part_10" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_10"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_10"]
mesh = SubResource( 3 )

[node name="part_11" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_11"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_11"]
mesh = SubResource( 3 )

[node name="part_12" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_12"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_12"]
mesh = SubResource( 3 )

[node name="part_13" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_13"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_13"]
mesh = SubResource( 3 )

[node name="part_14" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_14"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_14"]
mesh = SubResource( 3 )

[node name="part_15" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_15"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_15"]
mesh = SubResource( 3 )

[node name="part_16" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00414944, 1.5, 1.49934 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_16"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_16"]
mesh = SubResource( 3 )

[node name="part_17" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -1.5, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_17"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_17"]
mesh = SubResource( 3 )

[node name="part_18" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -1.5, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_18"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_18"]
mesh = SubResource( 3 )

[node name="part_19" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -1.5, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_19"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_19"]
mesh = SubResource( 3 )

[node name="part_20" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_20"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_20"]
mesh = SubResource( 3 )

[node name="part_21" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_21"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_21"]
mesh = SubResource( 3 )

[node name="part_22" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_22"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_22"]
mesh = SubResource( 3 )

[node name="part_23" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 1.5, -1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_23"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_23"]
mesh = SubResource( 3 )

[node name="part_24" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 1.5, 0 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_24"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_24"]
mesh = SubResource( 3 )

[node name="part_25" type="KinematicBody" parent="cube/parts_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 1.5, 1.5 )
script = ExtResource( 5 )

[node name="collider" type="CollisionShape" parent="cube/parts_container/part_25"]
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="cube/parts_container/part_25"]
mesh = SubResource( 3 )

[node name="faces_container" type="Spatial" parent="cube"]

[node name="face_front" type="Area" parent="cube/faces_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_front"]
shape = SubResource( 4 )

[node name="face_standing" type="Area" parent="cube/faces_container"]
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_standing"]
shape = SubResource( 4 )

[node name="face_back" type="Area" parent="cube/faces_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_back"]
shape = SubResource( 4 )

[node name="face_top" type="Area" parent="cube/faces_container"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_top"]
shape = SubResource( 4 )

[node name="face_equator" type="Area" parent="cube/faces_container"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_equator"]
shape = SubResource( 4 )

[node name="face_bottom" type="Area" parent="cube/faces_container"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.5, 0 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_bottom"]
shape = SubResource( 4 )

[node name="face_left" type="Area" parent="cube/faces_container"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.5, 0, 0 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_left"]
shape = SubResource( 4 )

[node name="face_middle" type="Area" parent="cube/faces_container"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_middle"]
shape = SubResource( 4 )

[node name="face_right" type="Area" parent="cube/faces_container"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.5, 0, 0 )
collision_layer = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape" parent="cube/faces_container/face_right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00706196, 0, 0.00878048 )
shape = SubResource( 4 )
